- changed # to -sharp.
git-svn-id: svn://svn.qnetp.net/smartirc/trunk@6 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,4 +7,4 @@ SmartIRC\#.dll: *.cs
 	$(CSC) /debug /target:library /r:../bin/log4net.dll /out:../bin/mono/debug/$@ $^
 
 clean:
-	-rm -f ../bin/mono/debug/SmartIRC#.dll
+	-rm -f ../bin/mono/debug/SmartIRC-sharp.dll
