- updated target name. - added more variables (easier configuration).
git-svn-id: svn://svn.qnetp.net/smartirc/trunk@29 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,17 @@
-
 CSC=mcs
+LOG4NET_DLL=log4net.dll
+SMARTIRC_DLL=Meebey.SmartIrc4net.dll
+LIB="bin/mono/debug/$(LOG4NET_DLL),bin/mono/debug/$(SMARTIRC_DLL)"
+TARGET=$(SMARTIRC_DLL)
 
-all: SmartIRC\#.dll
+all: debug release
 
-SmartIRC\#.dll: *.cs
-	$(CSC) /debug /target:library /r:../bin/log4net.dll /out:../bin/mono/debug/$@ $^
+debug: *.cs
+	$(CSC) /debug /target:library /r:../bin/$(LOG4NET_DLL) /out:../bin/mono/debug/$(TARGET) $^
+
+release: *.cs
+	$(CSC) /target:library /r:../bin/$(LOG4NET_DLL) /out:../bin/mono/release/$(TARGET) $^
 
 clean:
-	-rm -f ../bin/mono/debug/SmartIRC-sharp.dll
+	-rm -f ../bin/mono/debug/$(TARGET)
+	-rm -f ../bin/mono/release/$(TARGET)
