- added variables (easier configuration). - updated library filename.
git-svn-id: svn://svn.qnetp.net/smartirc/trunk@36 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/examples/test/Makefile
+++ b/examples/test/Makefile
@@ -1,12 +1,21 @@
 
 CSC=mcs
+LOG4NET_DLL=log4net.dll
+SMARTIRC_DLL=Meebey.SmartIrc4net.dll
+LIB="bin/mono/debug/$(LOG4NET_DLL),bin/mono/debug/$(SMARTIRC_DLL)"
+TARGET=test.exe
 
-all: test.exe
+all: debug release
 
-test.exe: *.cs
-	cp ../../bin/log4net.dll bin/mono/debug/
-	cp ../../bin/mono/debug/SmartIRC\#.dll bin/mono/debug/
-	$(CSC) /debug /r:../../bin/log4net.dll,../../bin/mono/debug/SmartIRC\#.dll /out:bin/mono/debug/$@ $^
+debug: *.cs
+	cp ../../bin/$(LOG4NET_DLL) bin/mono/debug/$(LOG4NET_DLL)
+	cp ../../bin/mono/debug/$(SMARTIRC_DLL) bin/mono/debug/$(SMARTIRC_DLL)
+	$(CSC) /debug /r:$(LIB) /out:bin/mono/debug/$(TARGET) $^
+
+release: *.cs
+	cp ../../bin/$(LOG4NET_DLL) bin/mono/release/$(LOG4NET_DLL)
+	cp ../../bin/mono/release/$(SMARTIRC_DLL) bin/mono/release/$(SMARTIRC_DLL)
+	$(CSC) /r:$(LIB) /out:bin/mono/release/$(TARGET) $^
 
 clean:
 	-rm -f bin/mono/debug/test.exe
