- tons of bugfixes
git-svn-id: svn://svn.qnetp.net/smartirc/trunk@65 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/examples/test/bin/net/debug/SmartIrc4net_log.config
+++ b/examples/test/bin/net/debug/SmartIrc4net_log.config
@@ -18,9 +18,19 @@
 			</layout>
 		</appender>
 		<root>
-			<level value="DEBUG" />
+			<!-- level value="DEBUG" / -->
+			<level value="WARN" />
 			<appender-ref ref="RollingLogFileAppender" />
 			<appender-ref ref="ConsoleAppender" />
 		</root>
+		<logger name="CHANNELSYNCING">
+			<level value="DEBUG" />
+		</logger>
+		<logger name="CONNECTION">
+			<level value="DEBUG" />
+		</logger>
+		<logger name="SOCKET">
+			<level value="DEBUG" />
+		</logger>
 	</log4net>
 </configuration>
