--- a/src/Makefile
+++ b/src/Makefile
@@ -18,3 +18,5 @@ install: release
 clean:
 	-rm -f ../bin/mono/debug/$(TARGET)
 	-rm -f ../bin/mono/release/$(TARGET)
+
+.PHONY: all debug release install clean
