--- a/VisualStudio/SmartIrc4net.csproj
+++ b/VisualStudio/SmartIrc4net.csproj
@@ -76,6 +76,7 @@
                 <File
                     RelPath = "AssemblyInfo.cs"
                     Link = "..\src\AssemblyInfo.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
@@ -99,6 +100,7 @@
                 <File
                     RelPath = "Logger.cs"
                     Link = "..\src\Logger.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
