- quick hack to let the makefile work again after the directory structure is changed
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@96 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,10 +6,10 @@ TARGET=$(SMARTIRC_DLL)
 
 all: release
 
-debug: *.cs
+debug: *.cs */*.cs
 	$(CSC) /debug /define:TRACE,DEBUG,LOG4NET /target:library /r:../bin/$(LOG4NET_DLL) /out:../bin/mono/debug/$(TARGET) $^
 
-release: *.cs
+release: *.cs */*.cs
 	$(CSC) /target:library /out:../bin/mono/release/$(TARGET) $^
 
 install: release
