- fixed error handling for the connection. - optimized the makefile (less static, more userfriendly, ready to use)
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@126 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/examples/test/Makefile
+++ b/examples/test/Makefile
@@ -1,21 +1,22 @@
 
 CSC=mcs
-LOG4NET_DLL=log4net.dll
 SMARTIRC_DLL=Meebey.SmartIrc4net.dll
-LIB="bin/mono/debug/$(LOG4NET_DLL),bin/mono/debug/$(SMARTIRC_DLL)"
 TARGET=test.exe
 
-all: debug release
+all: release
 
 debug: *.cs
-	cp ../../bin/$(LOG4NET_DLL) bin/mono/debug/$(LOG4NET_DLL)
-	cp ../../bin/mono/debug/$(SMARTIRC_DLL) bin/mono/debug/$(SMARTIRC_DLL)
-	$(CSC) /debug /r:$(LIB) /out:bin/mono/debug/$(TARGET) $^
+	TARGET_PATH=bin/mono/debug
+	mkdir -p $(TARGET_PATH)
+	cp ../../$(TARGET_PATH/$(SMARTIRC_DLL) $(TARGET_PATH)/$(SMARTIRC_DLL)
+	$(CSC) /debug /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
 release: *.cs
-	cp ../../bin/$(LOG4NET_DLL) bin/mono/release/$(LOG4NET_DLL)
-	cp ../../bin/mono/release/$(SMARTIRC_DLL) bin/mono/release/$(SMARTIRC_DLL)
-	$(CSC) /r:$(LIB) /out:bin/mono/release/$(TARGET) $^
+	TARGET_PATH=bin/mono/release
+	mkdir -p $(TARGET_PATH)
+	cp ../../$(TARGET_PATH)/$(SMARTIRC_DLL) $(TARGET_PATH)/$(SMARTIRC_DLL)
+	$(CSC) /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
 clean:
-	-rm -f bin/mono/debug/test.exe
+	-rm -f bin/mono/debug/$(TARGET)
+	-rm -f bin/mono/release/$(TARGET)
