--- a/examples/test/Makefile
+++ b/examples/test/Makefile
@@ -5,14 +5,14 @@ TARGET=test.exe
 
 all: release
 
+debug: TARGET_PATH=bin/mono/debug
 debug: *.cs
-	TARGET_PATH=bin/mono/debug
 	mkdir -p $(TARGET_PATH)
 	cp ../../$(TARGET_PATH/$(SMARTIRC_DLL) $(TARGET_PATH)/$(SMARTIRC_DLL)
 	$(CSC) /debug /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
+release: TARGET_PATH=bin/mono/release
 release: *.cs
-	TARGET_PATH=bin/mono/release
 	mkdir -p $(TARGET_PATH)
 	cp ../../$(TARGET_PATH)/$(SMARTIRC_DLL) $(TARGET_PATH)/$(SMARTIRC_DLL)
 	$(CSC) /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
