- signing is now own make target
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@129 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,14 +3,18 @@ GACUTIL=gacutil
 LOG4NET_DLL=log4net.dll
 SMARTIRC_DLL=Meebey.SmartIrc4net.dll
 TARGET=$(SMARTIRC_DLL)
-
+DEBUG_DEFINES=TRACE,DEBUG,LOG4NET
+	
 all: release
 
 debug: *.cs */*.cs
-	$(CSC) /debug /define:TRACE,DEBUG,LOG4NET /target:library /r:../bin/$(LOG4NET_DLL) /out:../bin/mono/debug/$(TARGET) $^
+	$(CSC) /debug /define:$(DEBUG_DEFINES) /target:library /r:../bin/$(LOG4NET_DLL) /out:../bin/mono/debug/$(TARGET) $^
 
 release: *.cs */*.cs
 	$(CSC) /target:library /out:../bin/mono/release/$(TARGET) $^
+
+sign: *.cs */*.cs
+	$(CSC) /target:library /define:SIGN /out:../bin/mono/release/$(TARGET) $^
 
 install: release
 	$(GACUTIL) -i ../bin/mono/release/$(SMARTIRC_DLL) -f -package SmartIrc4net
