- using now the main bin/ directory structure
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@131 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/examples/test/Makefile
+++ b/examples/test/Makefile
@@ -1,24 +1,24 @@
 
 CSC=mcs
 SMARTIRC_DLL=Meebey.SmartIrc4net.dll
+LOG4NET_DLL=log4net.dll
 TARGET=test.exe
 
 all: release
 
-debug: TARGET_PATH=bin/mono/debug
+debug: TARGET_PATH=../../bin/mono/debug
 debug: *.cs
 	mkdir -p $(TARGET_PATH)
-	cp ../../$(TARGET_PATH)/$(SMARTIRC_DLL) $(TARGET_PATH)/$(SMARTIRC_DLL)
+	cp ../../bin/$(LOG4NET_DLL) $(TARGET_PATH)
 	$(CSC) /debug /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
-release: TARGET_PATH=bin/mono/release
+release: TARGET_PATH=../../bin/mono/release
 release: *.cs
 	mkdir -p $(TARGET_PATH)
-	cp ../../$(TARGET_PATH)/$(SMARTIRC_DLL) $(TARGET_PATH)/$(SMARTIRC_DLL)
 	$(CSC) /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
 clean:
-	-rm -f bin/mono/debug/$(TARGET)
-	-rm -f bin/mono/release/$(TARGET)
+	-rm -f ../../bin/mono/debug/$(TARGET)
+	-rm -f ../../bin/mono/release/$(TARGET)
 
 .PHONY: all debug release clean
