--- a/examples/test/Makefile
+++ b/examples/test/Makefile
@@ -10,11 +10,13 @@ debug: TARGET_PATH=../../bin/mono/debug
 debug: *.cs
 	mkdir -p $(TARGET_PATH)
 	cp ../../bin/$(LOG4NET_DLL) $(TARGET_PATH)
+	cd ../../src; make debug
 	$(CSC) /debug /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
 release: TARGET_PATH=../../bin/mono/release
 release: *.cs
 	mkdir -p $(TARGET_PATH)
+	cd ../../src; make release
 	$(CSC) /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
 clean:
