- updated for 2 new files, NonRfcChannel.cs and NonRfcChannelUser.cs
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@148 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/VisualStudio/SmartIrc4net.csproj
+++ b/VisualStudio/SmartIrc4net.csproj
@@ -146,6 +146,18 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "IrcClient\NonRfcChannel.cs"
+                    Link = "..\src\IrcClient\NonRfcChannel.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "IrcClient\NonRfcChannelUser.cs"
+                    Link = "..\src\IrcClient\NonRfcChannelUser.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "IrcCommands\IrcCommands.cs"
                     Link = "..\src\IrcCommands\IrcCommands.cs"
                     SubType = "Code"
