- updated and adding MS VS.NET project files.
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@177 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/VisualStudio/SmartIrc4net.csproj
+++ b/VisualStudio/SmartIrc4net.csproj
@@ -28,8 +28,8 @@
                     BaseAddress = "285212672"
                     CheckForOverflowUnderflow = "false"
                     ConfigurationOverrideFile = ""
-                    DefineConstants = "DEBUG;TRACE"
-                    DocumentationFile = ""
+                    DefineConstants = "DEBUG;TRACE;LOG4NET"
+                    DocumentationFile = "Meebey.SmartIrc4net.xml"
                     DebugSymbols = "true"
                     FileAlignment = "4096"
                     IncrementalBuild = "false"
@@ -46,10 +46,10 @@
                     Name = "Release"
                     AllowUnsafeBlocks = "false"
                     BaseAddress = "285212672"
-                    CheckForOverflowUnderflow = "false"
+                    CheckForOverflowUnderflow = "true"
                     ConfigurationOverrideFile = ""
                     DefineConstants = ""
-                    DocumentationFile = ""
+                    DocumentationFile = "Meebey.SmartIrc4net.xml"
                     DebugSymbols = "false"
                     FileAlignment = "4096"
                     IncrementalBuild = "false"
