- tuned again makefiles.
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@182 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/examples/test/Makefile
+++ b/examples/test/Makefile
@@ -10,17 +10,23 @@ debug: TARGET_PATH=../../bin/mono/debug
 debug: *.cs
 	mkdir -p $(TARGET_PATH)
 	cp ../../bin/$(LOG4NET_DLL) $(TARGET_PATH)
-	cd ../../src; make debug
 	$(CSC) /debug /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
 release: TARGET_PATH=../../bin/mono/release
 release: *.cs
 	mkdir -p $(TARGET_PATH)
-	cd ../../src; make release
 	$(CSC) /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
+	
+debug-full:
+	cd ../../src; make debug
+	$(MAKE) debug
+
+release-full: release
+	cd ../../src; make release
+	$(MAKE) release
 
 clean:
 	-rm -f ../../bin/mono/debug/$(TARGET)
 	-rm -f ../../bin/mono/release/$(TARGET)
 
-.PHONY: all debug release clean
+.PHONY: all debug debug-full release release-full clean
