--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,15 @@
 CSC=mcs
 CSS=sn
+CLI=mono
 GACUTIL=gacutil
 LOG4NET_DLL=log4net.dll
 SMARTIRC_DLL=Meebey.SmartIrc4net.dll
 TARGET=$(SMARTIRC_DLL)
-DOC_TARGET=Meebey.SmartIrc4net.xml
+XML_DOC_TARGET=Meebey.SmartIrc4net.xml
 DEBUG_DEFINES=TRACE,DEBUG,LOG4NET
-	
+NDOC=$(CLI) ../../ndoc/bin/mono/1.0/NDocConsole.exe
+NDOC_TARGET_DIR=../docs/html
+
 all: release
 
 debug: debug-stamp
@@ -16,7 +19,7 @@ debug-stamp: *.cs */*.cs
 
 release: release-stamp
 release-stamp: *.cs */*.cs
-	$(CSC) /target:library /doc:../bin/mono/release/$(DOC_TARGET) /out:../bin/mono/release/$(TARGET) $^
+	$(CSC) /target:library /doc:../bin/mono/release/$(XML_DOC_TARGET) /out:../bin/mono/release/$(TARGET) $^
 	touch release-stamp
 
 release-signed: release-signed-stamp
@@ -25,6 +28,12 @@ release-signed-stamp: *.cs */*.cs
 	$(CSS) -R ../bin/mono/release/$(TARGET) ../SmartIrc4net.snk
 	touch release-signed-stamp
 
+docs: release
+	$(NDOC) ../bin/mono/release/$(SMARTIRC_DLL) \
+	  -documenter=MSDN -OutputTarget=Web -OutputDirectory=$(NDOC_TARGET_DIR) \
+	  -Title="SmartIrc4net API documentation" -SdkLinksOnWeb=true \
+	  -AssemblyVersionInfo=AssemblyVersion
+      
 install: relase
 	$(GACUTIL) -i ../bin/mono/release/$(SMARTIRC_DLL) -f -package SmartIrc4net
 
