- fixed typo (thanks to apeiron for spotting this)
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@205 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/src/Makefile
+++ b/src/Makefile
@@ -34,7 +34,7 @@ docs: release
 	  -Title="SmartIrc4net API documentation" -SdkLinksOnWeb=true \
 	  -AssemblyVersionInfo=AssemblyVersion
       
-install: relase
+install: release
 	$(GACUTIL) -i ../bin/mono/release/$(SMARTIRC_DLL) -f -package SmartIrc4net
 
 clean:
