- added more sanity checks. - implemented IrcClient.IsAway property. - added a workaround for using encodings that have a preamble (like UTF-8 has BOM).
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@209 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,8 @@ SMARTIRC_DLL=Meebey.SmartIrc4net.dll
 TARGET=$(SMARTIRC_DLL)
 XML_DOC_TARGET=Meebey.SmartIrc4net.xml
 DEBUG_DEFINES=TRACE,DEBUG,LOG4NET
-NDOC=$(CLI) ../../ndoc/bin/mono/1.0/NDocConsole.exe
+#NDOC=$(CLI) ../../ndoc/bin/mono/1.0/NDocConsole.exe
+NDOC=ndoc-console
 NDOC_TARGET_DIR=../docs/html
 
 all: release
