--- a/examples/test/VisualStudio/2003/test.csproj
+++ b/examples/test/VisualStudio/2003/test.csproj
@@ -36,7 +36,7 @@
                     NoStdLib = "false"
                     NoWarn = ""
                     Optimize = "false"
-                    OutputPath = "..\..\..\bin\net\debug\"
+                    OutputPath = "..\..\..\..\bin\debug\"
                     RegisterForComInterop = "false"
                     RemoveIntegerChecks = "false"
                     TreatWarningsAsErrors = "false"
@@ -56,7 +56,7 @@
                     NoStdLib = "false"
                     NoWarn = ""
                     Optimize = "true"
-                    OutputPath = "..\..\..\bin\net\release\"
+                    OutputPath = "..\..\..\..\bin\release\"
                     RegisterForComInterop = "false"
                     RemoveIntegerChecks = "false"
                     TreatWarningsAsErrors = "false"
@@ -72,7 +72,7 @@
                 <Reference
                     Name = "Meebey.SmartIrc4net"
                     AssemblyName = "Meebey.SmartIrc4net"
-                    HintPath = "..\..\..\bin\net\release\Meebey.SmartIrc4net.dll"
+                    HintPath = "..\..\..\..\bin\release\Meebey.SmartIrc4net.dll"
                 />
             </References>
         </Build>
@@ -80,13 +80,13 @@
             <Include>
                 <File
                     RelPath = "AssemblyInfo.cs"
-                    Link = "..\AssemblyInfo.cs"
+                    Link = "..\..\AssemblyInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
                     RelPath = "test.cs"
-                    Link = "..\test.cs"
+                    Link = "..\..\test.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
