- removed mono subdirectory from Makefiles
git-svn-id: svn://svn.qnetp.net/smartirc/SmartIrc4net/trunk@240 90edd973-07db-0310-a660-9c5aa9508ff8

--- a/examples/benchmark/Makefile
+++ b/examples/benchmark/Makefile
@@ -6,13 +6,13 @@ TARGET=benchmark.exe
 
 all: release
 
-debug: TARGET_PATH=../../bin/mono/debug
+debug: TARGET_PATH=../../bin/debug
 debug: *.cs
 	mkdir -p $(TARGET_PATH)
 	cp ../../bin/$(LOG4NET_DLL) $(TARGET_PATH)
 	$(CSC) /debug /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
 
-release: TARGET_PATH=../../bin/mono/release
+release: TARGET_PATH=../../bin/release
 release: *.cs
 	mkdir -p $(TARGET_PATH)
 	$(CSC) /r:$(TARGET_PATH)/$(SMARTIRC_DLL) /out:$(TARGET_PATH)/$(TARGET) $^
@@ -26,7 +26,7 @@ release-full:
 	$(MAKE) release
 	
 clean:
-	-rm -f ../../bin/mono/debug/$(TARGET)
-	-rm -f ../../bin/mono/release/$(TARGET)
+	-rm -f ../../bin/debug/$(TARGET)
+	-rm -f ../../bin/release/$(TARGET)
 
 .PHONY: all debug debug-full release release-full clean
